Exercício 9c, Lista de definições

--- a/html-css/exercicios/ex009b/index.html
+++ b/html-css/exercicios/ex009b/index.html
@@ -28,7 +28,19 @@
         <li>Coca cola</li>
     </ul>
 
+    <h2>Lista de Definições</h2>
+    <dl>
+        <dt>HTML</dt>
+        <dd>Linguagem de marcação de texto</dd>
 
+        <dt>CSS</dt>
+        <dd>Linguagem de estilização</dd>
+
+        <dt>JavaScript</dt>
+        <dd>Liguagem de programção para iteratividade para sites</dd>
+
+    </dl>
+    
 
 </body>
 </html>
